<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr04_20172.lab1.Activity_Login">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">


        <TextView
            android:layout_width="333dp"
            android:layout_height="115dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="70dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailLogin"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordLogin"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/buttonLogUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/logup" />


    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>
